Add navbar and heading sections in index.html & styles in css file. Add images & info to READEM file.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/styles.css">
   <title>Portfolio - Setup and Mobile First</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <header class="toolbar">
+    <div class="container-1"></div>
+    <div class="container-2">
+        <div class="logo"><a href="#home"><p class="logo-txt">My Logo</p></a></div>
+        <div class="space1"></div>
+        <nav class="menu"><div><img class="menu-im" alt="Menu" src="images/menu.svg"></div></nav>
+    </div>
+  </header>
+  <section class="headline">
+    <h1 class="name">I'm Juan Carlos. <br>Glad to see you!</h1>
+    <p class="desc">I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
+    <p class="connect">LET'S CONNECT</p>
+  </section>
 </body>
 </html>
