--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
     <h1 class="name">I'm Juan Carlos. <br>Glad to see you!</h1>
     <p class="desc">I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
     <p class="connect">LET'S CONNECT</p>
+    <ul>
+      <div class="container-3">
+          <li>
+              <a class="twitter" href="www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" src="images/twitter.png"></a>
+          </li>
+          <li>
+              <a class="linkedin" href="www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" src="images/linkedin.png"></a>
+          </li>
+          <li>
+              <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" src="images/m.png"></a>
+          </li>
+          <li>
+              <a class="github" href="www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" src="images/github.png"></a>
+          </li>
+          <li>
+              <a class="sign" href="www.google.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" src="images/angellist.png"></a>
+          </li>
+      </div>
+    </ul>
   </section>
 </body>
 </html>
