Edit styles and sizes of social media icons

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
     <ul>
       <div class="container-3">
           <li>
-              <a class="twitter" href="www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" src="images/twitter.png"></a>
+              <a class="twitter" href="www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"></a>
           </li>
           <li>
-              <a class="linkedin" href="www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" src="images/linkedin.png"></a>
+              <a class="linkedin" href="www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"></a>
           </li>
           <li>
-              <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" src="images/m.png"></a>
+              <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"></a>
           </li>
           <li>
-              <a class="github" href="www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" src="images/github.png"></a>
+              <a class="github" href="www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"></a>
           </li>
           <li>
-              <a class="sign" href="www.google.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" src="images/angellist.png"></a>
+              <a class="angellist" href="www.google.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="20px" src="images/angellist.png"></a>
           </li>
       </div>
     </ul>
