--- a/index.html
+++ b/index.html
@@ -12,33 +12,31 @@
 </head>
 <body>
   <header class="toolbar">
-    <div class="container-1"></div>
     <div class="container-2">
-        <div class="logo"><a href="#home"><p class="logo-txt">My Logo</p></a></div>
-        <div class="space1"></div>
-        <nav class="menu"><div><img class="menu-im" alt="Menu" src="images/menu.svg"></div></nav>
+        <div class="logo"><a href="#home"><p class="logo-txt poppins">My Logo</p></a></div>
+        <nav class="menu"><img class="menu-im" alt="Menu" width="24px" height="24px" src="images/menu.svg"></nav>
     </div>
   </header>
-  <section class="headline">
-    <h1 class="name">I'm Juan Carlos. <br>Glad to see you!</h1>
+  <section class="headline poppins">
+    <h1 class="name">I'm Juan Carlos. Glad to see you!</h1>
     <p class="desc">I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
     <p class="connect">LET'S CONNECT</p>
     <ul>
       <div class="container-3">
           <li>
-              <a class="twitter" href="www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"></a>
+              <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"></a>
           </li>
           <li>
-              <a class="linkedin" href="www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"></a>
+              <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"></a>
           </li>
           <li>
               <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"></a>
           </li>
           <li>
-              <a class="github" href="www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"></a>
+              <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"></a>
           </li>
           <li>
-              <a class="angellist" href="www.google.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="20px" src="images/angellist.png"></a>
+              <a class="angellist" href="https:wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="22px" src="images/angellist.png"></a>
           </li>
       </div>
     </ul>
