Edit html & css files to make suggested changes in fixed width and <p> tag

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section class="headline poppins">
     <h1 class="name">I'm Juan Carlos. Glad to see you!</h1>
     <p class="desc">I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
-    <p class="connect">LET'S CONNECT</p>
+    <h3 class="connect">LET'S CONNECT</h3>
     <ul>
       <div class="container-3">
           <li>
