Add work section with first work card. Edit html & css.

--- a/index.html
+++ b/index.html
@@ -41,5 +41,29 @@
       </div>
     </ul>
   </section>
+  <section class="works">
+    <div class="grid-1">
+      <div class="work1">
+        <img class="work1-img" alt="work 1" width="590px" height="440px" src="images/job1.png">
+        <h2 class="work-text1 poppins">Tonic</h2>
+        <ul class="flex1">
+            <li><p class="canopy poppins">CANOPY</p></li>
+            <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></li>
+            <li><p class="bed poppins">Back End Dev</p></li>
+            <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></p></li>
+            <li><p class="year poppins">2015</p></li>
+        </ul>
+        <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+        <ul class="flex2">
+            <li><p class="stack poppins">html</p></li>
+            <li><p class="stack poppins">css</p></li>
+            <li><p class="stack poppins">javascript</p></li>
+        </ul>
+        <nav>
+            <button type="button" class="see-project poppins">See project</button>
+        </nav>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
