Add second work card in work section, in html file.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
             <button type="button" class="see-project poppins">See project</button>
         </nav>
       </div>
+      <div class="work1">
+        <img class="work1-img" alt="work 2" width="590px" height="440px" src="images/job2.png">
+        <h2 class="work-text1 poppins">Multi-Post Stories</h2>
+        <ul class="flex1">
+            <li><p class="canopy poppins">CANOPY</p></li>
+            <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></li>
+            <li><p class="bed poppins">Back End Dev</p></li>
+            <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></p></li>
+            <li><p class="year poppins">2015</p></li>
+        </ul>
+        <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+        <ul class="flex2">
+            <li><p class="stack poppins">html</p></li>
+            <li><p class="stack poppins">css</p></li>
+            <li><p class="stack poppins">javascript</p></li>
+        </ul>
+        <nav>
+            <button type="button" class="see-project poppins">See project</button>
+        </nav>
+      </div>
     </div>
   </section>
 </body>
