Add first part of About Me section; edit index & css files.

--- a/index.html
+++ b/index.html
@@ -129,5 +129,34 @@
       </div>
     </div>
   </section>
+  <section class="about_myself">
+    <h2 class="about poppins">About Myself</h2>
+    <p class="desc poppins">Hello I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.
+    </p>
+    <h3 class="connect poppins">LET'S CONNECT</h3>
+    <ul>
+      <div class="container-4">
+          <li>
+            <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"></a>
+          </li>
+          <li>
+            <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"></a>
+          </li>
+          <li>
+            <a class="angellist" href="https:wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="22px" src="images/angellist.png"></a>
+          </li>
+          <li>
+              <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"></a>
+          </li>
+          <li>
+              <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"></a>
+          </li>
+      </div>
+    </ul>
+    <nav>
+      <button type="button" class="my-resume">Get my resume</button>
+    </nav>
+
+  </section>
 </body>
 </html>
