Add languages section in About Myself (technologies) section.

--- a/index.html
+++ b/index.html
@@ -157,6 +157,35 @@
       <button type="button" class="my-resume">Get my resume</button>
     </nav>
 
+    <div class="languages">
+      <p class="lang poppins">Languages</p>
+      <button name="button-arrow1" type="button"><img class="arrow-down" alt="" width="512px" height= "512px" src="images/down-arrow.png"></button>
+    </div>
+    <ul class="lang-sub">
+      <div class="lang1">
+          <li class="li-sp">
+              <div class="row1">
+                  <img class="js-img" alt="JS Logo" width="100px" height= "100px" src="images/js.png">
+                  <p class="js poppins">JavaScript</p>
+              </div>
+          </li>
+          <li class="li-sp">
+              <div class="row1">
+                  <img class="html5-img" alt="HTML5 Logo" width="100px" height="101px" src="images/html5.png">
+                  <p class="html5 poppins">HTML</p>
+              </div>
+          </li>
+          <li class="li-sp">
+              <div class="row1">
+                  <img class="css3-img" alt="CSS3 Logo" width="100px" height="101px" src="images/css3.png">
+                  <p class="css3 poppins">CSS</p>
+              </div>
+          </li>
+      </div>
+    </ul>
+    <hr/>
+    
+
   </section>
 </body>
 </html>
