Add frameworks & skills sections in About Myself section; adapt Mobile & Desktop versions in css file.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
   </header>
   <section class="headline poppins">
-    <h1 class="name">I'm Juan Carlos. Glad to see you!</h1>
+    <h1 class="name">I'm Juan Carlos. <br>Glad to see you!</h1>
     <p class="desc">I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
     <h3 class="connect">LET'S CONNECT</h3>
     <ul>
@@ -56,9 +56,9 @@
         </ul>
         <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
         <ul class="flex2">
-            <li><p class="stack poppins">html</p></li>
-            <li><p class="stack poppins">css</p></li>
-            <li><p class="stack poppins">javascript</p></li>
+            <li><p class="stack poppins">HTML</p></li>
+            <li><p class="stack poppins">CSS</p></li>
+            <li><p class="stack poppins">JavaScript</p></li>
         </ul>
         <nav>
             <button type="button" class="see-project poppins">See project</button>
@@ -77,9 +77,9 @@
         </ul>
         <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
         <ul class="flex2">
-            <li><p class="stack poppins">html</p></li>
-            <li><p class="stack poppins">css</p></li>
-            <li><p class="stack poppins">javascript</p></li>
+            <li><p class="stack poppins">HTML</p></li>
+            <li><p class="stack poppins">CSS</p></li>
+            <li><p class="stack poppins">JavaScript</p></li>
         </ul>
         <nav>
             <button type="button" class="see-project poppins">See project</button>
@@ -98,9 +98,9 @@
         </ul>
         <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
         <ul class="flex2">
-            <li><p class="stack poppins">html</p></li>
-            <li><p class="stack poppins">css</p></li>
-            <li><p class="stack poppins">javascript</p></li>
+            <li><p class="stack poppins">HTML</p></li>
+            <li><p class="stack poppins">CSS</p></li>
+            <li><p class="stack poppins">JavaScript</p></li>
         </ul>
         <nav>
             <button type="button" class="see-project poppins">See project</button>
@@ -119,9 +119,9 @@
         </ul>
         <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
         <ul class="flex2">
-            <li><p class="stack poppins">html</p></li>
-            <li><p class="stack poppins">css</p></li>
-            <li><p class="stack poppins">javascript</p></li>
+            <li><p class="stack poppins">HTML</p></li>
+            <li><p class="stack poppins">CSS</p></li>
+            <li><p class="stack poppins">JavaScript</p></li>
         </ul>
         <nav>
             <button type="button" class="see-project poppins">See project</button>
@@ -184,8 +184,16 @@
       </div>
     </ul>
     <hr/>
-    
-
+    <div class="frameworks">
+      <p class="frame poppins">Frameworks</p>
+      <button name="button-arrow2" type="button"><img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
+    </div>
+    <hr/>
+    <div class="skills">
+      <p class="skill poppins">Skills</p>
+      <button name="button-arrow3" type="button"> <img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
+    </div>
+    <hr/>
   </section>
 </body>
 </html>
