Edit index and css files to adjust the required changes.

--- a/index.html
+++ b/index.html
@@ -21,24 +21,22 @@
     <h1 class="name">I'm Juan Carlos. <br>Glad to see you!</h1>
     <p class="desc">I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
     <h3 class="connect">LET'S CONNECT</h3>
-    <ul>
-      <div class="container-3">
-          <li>
-              <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"></a>
-          </li>
-          <li>
-              <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"></a>
-          </li>
-          <li>
-              <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"></a>
-          </li>
-          <li>
-              <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"></a>
-          </li>
-          <li>
-              <a class="angellist" href="https:wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="22px" src="images/angellist.png"></a>
-          </li>
-      </div>
+    <ul class="container-3">
+      <li>
+        <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"></a>
+      </li>
+      <li>
+        <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"></a>
+      </li>
+      <li>
+        <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"></a>
+      </li>
+      <li>
+        <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"></a>
+      </li>
+      <li>
+        <a class="angellist" href="https:wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="22px" src="images/angellist.png"></a>
+      </li>
     </ul>
   </section>
   <section class="works">
@@ -60,9 +58,7 @@
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
         </ul>
-        <nav>
-            <button type="button" class="see-project poppins">See project</button>
-        </nav>
+        <button type="button" class="see-project poppins">See project</button>
       </div>
       <!-- Second card -->
       <div class="work1">
@@ -81,9 +77,7 @@
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
         </ul>
-        <nav>
-            <button type="button" class="see-project poppins">See project</button>
-        </nav>
+        <button type="button" class="see-project poppins">See project</button>
       </div>
       <!-- Third card -->
       <div class="work1">
@@ -102,9 +96,7 @@
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
         </ul>
-        <nav>
-            <button type="button" class="see-project poppins">See project</button>
-        </nav>
+        <button type="button" class="see-project poppins">See project</button>
       </div>
       <!-- Fourth card -->
       <div class="work1">
@@ -123,9 +115,7 @@
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
         </ul>
-        <nav>
-            <button type="button" class="see-project poppins">See project</button>
-        </nav>
+        <button type="button" class="see-project poppins">See project</button>
       </div>
     </div>
   </section>
@@ -134,66 +124,69 @@
     <p class="desc poppins">Hello I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.
     </p>
     <h3 class="connect poppins">LET'S CONNECT</h3>
+    <ul class="container-4">
+      <li>
+        <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"></a>
+      </li>
+      <li>
+        <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"></a>
+      </li>
+      <li>
+        <a class="angellist" href="https:wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="22px" src="images/angellist.png"></a>
+      </li>
+      <li>
+        <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"></a>
+      </li>
+      <li>
+        <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"></a>
+      </li>
+    </ul>
+    <button type="button" class="my-resume">Get my resume</button>
     <ul>
-      <div class="container-4">
-          <li>
-            <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"></a>
-          </li>
-          <li>
-            <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"></a>
-          </li>
-          <li>
-            <a class="angellist" href="https:wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="22px" src="images/angellist.png"></a>
-          </li>
-          <li>
-              <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"></a>
-          </li>
-          <li>
-              <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"></a>
-          </li>
-      </div>
+      <li>
+        <div class="languages">
+          <p class="lang poppins">Languages</p>
+          <button name="button-arrow1" type="button"><img class="arrow-down" alt="" width="512px" height= "512px" src="images/down-arrow.png"></button>
+        </div>
+        <ul class="lang-sub">
+          <!-- <div class="lang1"> -->
+              <li class="li-sp">
+                  <div class="row1">
+                      <img class="js-img" alt="JS Logo" width="100px" height= "100px" src="images/js.png">
+                      <p class="js poppins">JavaScript</p>
+                  </div>
+              </li>
+              <li class="li-sp">
+                  <div class="row1">
+                      <img class="html5-img" alt="HTML5 Logo" width="100px" height="101px" src="images/html5.png">
+                      <p class="html5 poppins">HTML</p>
+                  </div>
+              </li>
+              <li class="li-sp">
+                  <div class="row1">
+                      <img class="css3-img" alt="CSS3 Logo" width="100px" height="101px" src="images/css3.png">
+                      <p class="css3 poppins">CSS</p>
+                  </div>
+              </li>
+          <!-- </div> -->
+        </ul>
+        <hr/>
+      </li>
+      <li>
+        <div class="frameworks">
+          <p class="frame poppins">Frameworks</p>
+          <button name="button-arrow2" type="button"><img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
+        </div>
+        <hr/>
+      </li>
+      <li>
+        <div class="skills">
+          <p class="skill poppins">Skills</p>
+          <button name="button-arrow3" type="button"> <img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
+        </div>
+        <hr/>
+      </li>
     </ul>
-    <nav>
-      <button type="button" class="my-resume">Get my resume</button>
-    </nav>
-
-    <div class="languages">
-      <p class="lang poppins">Languages</p>
-      <button name="button-arrow1" type="button"><img class="arrow-down" alt="" width="512px" height= "512px" src="images/down-arrow.png"></button>
-    </div>
-    <ul class="lang-sub">
-      <div class="lang1">
-          <li class="li-sp">
-              <div class="row1">
-                  <img class="js-img" alt="JS Logo" width="100px" height= "100px" src="images/js.png">
-                  <p class="js poppins">JavaScript</p>
-              </div>
-          </li>
-          <li class="li-sp">
-              <div class="row1">
-                  <img class="html5-img" alt="HTML5 Logo" width="100px" height="101px" src="images/html5.png">
-                  <p class="html5 poppins">HTML</p>
-              </div>
-          </li>
-          <li class="li-sp">
-              <div class="row1">
-                  <img class="css3-img" alt="CSS3 Logo" width="100px" height="101px" src="images/css3.png">
-                  <p class="css3 poppins">CSS</p>
-              </div>
-          </li>
-      </div>
-    </ul>
-    <hr/>
-    <div class="frameworks">
-      <p class="frame poppins">Frameworks</p>
-      <button name="button-arrow2" type="button"><img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
-    </div>
-    <hr/>
-    <div class="skills">
-      <p class="skill poppins">Skills</p>
-      <button name="button-arrow3" type="button"> <img class="arrow-right" alt="" width="512px" height= "512px" src="images/right-arrow.png"></button>
-    </div>
-    <hr/>
   </section>
 </body>
 </html>
