Add float class to languages section in the index.html file

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <li><p class="year poppins">2015</p></li>
         </ul>
         <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
-        <ul class="flex2">
-            <li><p class="stack poppins">HTML</p></li>
+        <ul class="float1">
+            <li><p class="stack poppins">HTML</p></li> 
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
         </ul>
@@ -72,7 +72,7 @@
             <li><p class="year poppins">2015</p></li>
         </ul>
         <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
-        <ul class="flex2">
+        <ul class="float1">
             <li><p class="stack poppins">HTML</p></li>
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
@@ -91,7 +91,7 @@
             <li><p class="year poppins">2015</p></li>
         </ul>
         <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
-        <ul class="flex2">
+        <ul class="float1">
             <li><p class="stack poppins">HTML</p></li>
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
@@ -110,7 +110,7 @@
             <li><p class="year poppins">2015</p></li>
         </ul>
         <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
-        <ul class="flex2">
+        <ul class="float1">
             <li><p class="stack poppins">HTML</p></li>
             <li><p class="stack poppins">CSS</p></li>
             <li><p class="stack poppins">JavaScript</p></li>
