--- a/index.html
+++ b/index.html
@@ -456,16 +456,22 @@
 
     <footer class="footer">
       <section class="contact">
-        <form id="form" action="">
+        <form id="form" action="https://formspree.io/f/mjvdqaka" method="post" class="form1">
           <h2 class="heading2">Contact me</h2>
-          <p class="paragraph2">
+          <p class="paragraph2 poppins">
             If you have an application you are interested in developing, a
             feature that you need built or a project that needs coding. I’d love
             to help with it!
           </p>
-          <input id="name" name="name" type="text" placeholder="Lorem Ipsum">
-          <input id="email" name="email" type="email" placeholder="loremipsum@gmail.com">
-          <textarea id="message" name="message" placeholder="Write your message here..."></textarea>
+          <div class="box2">
+            <input id="name" name="name" type="text" class="poppins" placeholder="Lorem Ipsum" maxlength="30" required>
+          </div>
+          <div class="box2">
+            <input id="email" name="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required>
+          </div>
+          <div class="box3">
+            <textarea id="message" name="message" class="poppins" rows="5" cols="43" placeholder="Write your message here..." maxlength="500" required></textarea>
+          </div>
           <button type="submit" class="btn">Get in touch</button>
         </form>
       </section>
