--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
           <h2 class="heading2">Contact me</h2>
           <p class="paragraph2 poppins">
             If you have an application you are interested in developing, a
-            feature that you need built or a project that needs coding. I’d love
+            feature that you need built or a project that needs coding.<br>I’d love
             to help with it!
           </p>
           <div class="box2">
