Edit index, css & README files to make three required and one optional change.

--- a/index.html
+++ b/index.html
@@ -453,9 +453,7 @@
         </li>
       </ul>
     </section>
-
     <footer class="footer">
-      <section class="contact">
         <form id="form" action="https://formspree.io/f/mjvdqaka" method="post" class="form1">
           <h2 class="heading2">Contact me</h2>
           <p class="paragraph2 poppins">
@@ -463,18 +461,19 @@
             feature that you need built or a project that needs coding.<br>I’d love
             to help with it!
           </p>
-          <div class="box2">
-            <input id="name" name="name" type="text" class="poppins" placeholder="Lorem Ipsum" maxlength="30" required>
-          </div>
-          <div class="box2">
-            <input id="email" name="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required>
-          </div>
-          <div class="box3">
-            <textarea id="message" name="message" class="poppins" rows="5" cols="43" placeholder="Write your message here..." maxlength="500" required></textarea>
-          </div>
+          <ul>
+            <li class="box2">
+              <input id="name" name="name" type="text" class="poppins" placeholder="Lorem Ipsum" maxlength="30" required />
+            </li>
+            <li class="box2">
+              <input id="email" name="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required />
+            </li>
+            <li class="box3">
+              <textarea id="message" name="message" class="poppins" rows="5" cols="43" placeholder="Write your message here..." maxlength="500" required></textarea>
+            </li>
+          </ul>
           <button type="submit" class="btn">Get in touch</button>
         </form>
-      </section>
     </footer>
   </body>
 </html>
