--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
           />
         </nav>
       </div>
+      <nav class="container-5">
+          <a href="#home" class="logo-text"><p class="logo-txt poppins">My Logo</p></a>
+          <ul class="nav-menu">
+            <li><a class="poppins nav-menu-text" href="#portfolio">Portfolio</a></li>
+            <li><a class="poppins nav-menu-text" href="#about-me">About</a></li>
+            <li><a class="poppins nav-menu-text" href="#contact-form">Contact</a></li>
+          </ul>
+      </nav>
     </header>
     <section class="headline poppins">
       <h1 class="name">I'm Juan Carlos. <br />Glad to see you!</h1>
@@ -103,7 +111,7 @@
         </li>
       </ul>
     </section>
-    <section class="works">
+    <section id="portfolio" class="works">
       <div class="grid-1">
         <!-- First card -->
         <div class="work1">
@@ -290,8 +298,109 @@
           <button type="button" class="see-project poppins">See project</button>
         </div>
       </div>
+      <div class="grid-1b">
+        <div class="rows">
+            <div class="photo1">
+                <img class="work1b-img" alt="work 1" width="" height="" src="images/job3b.png">
+            </div>
+            <div class="work1b">
+                <h2 class="work-text1b poppins">Tonic</h2>
+                <ul class="flex1">
+                    <li><p class="canopy poppins">CANOPY</p></li>
+                    <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></li>
+                    <li><p class="bed poppins">Back End Dev</p></li>
+                    <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></p></li>
+                    <li><p class="year poppins">2015</p></li>
+                </ul>
+                <p class="desc2 poppins">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                <ul class="flex2">
+                    <li><p class="stack poppins">html</p></li>
+                    <li><p class="stack poppins">css</p></li>
+                    <li><p class="stack poppins">javascript</p></li>
+                </ul>
+                <nav>
+                    <button type="button" class="see-project poppins">See project</button>
+                </nav>
+            </div>
+        </div>
+        <div class="rows">
+            <div class="work1b">
+                <h2 class="work-text1b poppins">Multi-Post Stories</h2>
+                <ul class="flex1">
+                    <li><p class="canopy poppins">FACEBOOK</p></li>
+                    <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></li>
+                    <li><p class="bed poppins">Full Stack Dev</p></li>
+                    <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></p></li>
+                    <li><p class="year poppins">2015</p></li>
+                </ul>
+                <p class="desc2 poppins">Experimental content creation feature that allows users to add to an existant story over the course of a day without spamming their friends.</p>
+                <ul class="flex2">
+                    <li><p class="stack poppins">html</p></li>
+                    <li><p class="stack poppins">Ruby on rails</p></li>
+                    <li><p class="stack poppins">css</p></li>
+                    <li><p class="stack poppins">javascript</p></li>
+                </ul>
+                <nav>
+                    <button type="button" class="see-project poppins">See project</button>
+                </nav>
+            </div>
+            <div class="photo2">
+                <img class="work1b-img" alt="work 2" width="" height="" src="images/job4b.png">
+            </div>
+        </div>
+        <div class="rows">
+            <div class="photo1">
+                <img class="work1b-img" alt="work 3" width="" height="" src="images/job1b.png">
+            </div>
+            <div class="work1b">
+                <h2 class="work-text1b poppins">Facebook 360</h2>
+                <ul class="flex1">
+                    <li><p class="canopy poppins">FACEBOOK</p></li>
+                    <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></li>
+                    <li><p class="bed poppins">Full Stack Dev</p></li>
+                    <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></p></li>
+                    <li><p class="year poppins">2015</p></li>
+                </ul>
+                <p class="desc2 poppins">Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and enjoy 360 photos and video on Gear VR.</p>
+                <ul class="flex2">
+                    <li><p class="stack poppins">html</p></li>
+                    <li><p class="stack poppins">Ruby on rails</p></li>
+                    <li><p class="stack poppins">css</p></li>
+                    <li><p class="stack poppins">javascript</p></li>
+                </ul>
+                <nav>
+                    <button type="button" class="see-project poppins">See project</button>
+                </nav>
+            </div>
+        </div>
+        <div class="rows">
+            <div class="work1b">
+                <h2 class="work-text1b poppins">Uber navigation</h2>
+                <ul class="flex1">
+                    <li><p class="canopy poppins">Uber</p></li>
+                    <li><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></li>
+                    <li><p class="bed poppins">Lead Developer</p></li>
+                    <li><p><img class="dot" alt="" width="16px" height="16px" src="images/dot1.png"></p></li>
+                    <li><p class="year poppins">2018</p></li>
+                </ul>
+                <p class="desc2 poppins">A smart assistant to make driving more safe, efficient and fun by unlocking your most expensive computer, your car.</p>
+                <ul class="flex2">
+                    <li><p class="stack poppins">html</p></li>
+                    <li><p class="stack poppins">Ruby on rails</p></li>
+                    <li><p class="stack poppins">css</p></li>
+                    <li><p class="stack poppins">javascript</p></li>
+                </ul>
+                <nav>
+                    <button type="button" class="see-project poppins">See project</button>
+                </nav>
+            </div>
+            <div class="photo2">
+                <img class="work1b-img" alt="work 4" width="" height="" src="images/job2b.png">
+            </div>
+        </div>
+      </div>
     </section>
-    <section class="about_myself">
+    <section id="about-me" class="about_myself">
       <h2 class="about poppins">About Myself</h2>
       <p class="desc poppins">
         Hello I'm a software developer! I can help you build a product, feature
@@ -380,7 +489,6 @@
             </button>
           </div>
           <ul class="lang-sub">
-            <!-- <div class="lang1"> -->
             <li class="li-sp">
               <div class="row1">
                 <img
@@ -417,7 +525,6 @@
                 <p class="css3 poppins">CSS</p>
               </div>
             </li>
-            <!-- </div> -->
           </ul>
           <hr />
         </li>
@@ -453,7 +560,7 @@
         </li>
       </ul>
     </section>
-    <footer class="footer">
+    <footer id="contact-form" class="footer">
         <form id="form" action="https://formspree.io/f/mjvdqaka" method="post" class="form1">
           <h2 class="heading2">Contact me</h2>
           <p class="paragraph2 poppins">
