Add some transitions to images, logos & h1 text in mobile & desktop versions.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
       </div>
       <nav class="container-5">
-          <a href="#home" class="logo-text"><p class="logo-txt poppins">My Logo</p></a>
+          <a href="#home" class="logo-text"><p class="logo-txt rotate poppins">My Logo</p></a>
           <ul class="nav-menu">
             <li><a class="poppins nav-menu-text" href="#portfolio">Portfolio</a></li>
             <li><a class="poppins nav-menu-text" href="#about-me">About</a></li>
@@ -30,26 +30,30 @@
       </nav>
     </header>
     <section class="headline poppins">
-      <h1 class="name">I'm Juan Carlos. <br />Glad to see you!</h1>
+      <h1 class="name" id="delay">I'm Juan Carlos. <br />Glad to see you!</h1>
       <p class="desc">I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
       <h3 class="connect">LET'S CONNECT</h3>
       <ul class="container-3">
         <li>
-          <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"/></a>
+          <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img class="rotate" alt="twitter" width="20px" height="20px" src="images/twitter.png"/></a>
         </li>
         <li>
-          <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"/></a>
+          <a class="linkedin" href="https://www.linkedin.com" rel="noopener noreferrer" target="_blank"><img class="lin rotate" alt="linkedin" width="20px" height="20px" src="images/linkedin.png"/></a>
         </li>
         <li>
-          <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img alt="logo-m" width="22px" height="20px" src="images/m.png"/></a>
+          <a class="m" href="https://medium.com/" rel="noopener noreferrer" target="_blank"><img class="rotate" alt="logo-m" width="22px" height="20px" src="images/m.png"/></a>
         </li>
         <li>
-          <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img alt="github" width="18px" height="20px" src="images/github.png"/></a>
+          <a class="github" href="https://www.github.com" rel="noopener noreferrer" target="_blank"><img class="rotate" alt="github" width="18px" height="20px" src="images/github.png"/></a>
         </li>
         <li>
-          <a class="angellist" href="https:wellfound.com" rel="noopener noreferrer" target="_blank"><img alt="logo-sign" width="20px" height="22px" src="images/angellist.png"/></a>
+          <a class="angellist" href="https:wellfound.com" rel="noopener noreferrer" target="_blank"><img class="rotate" alt="logo-sign" width="20px" height="22px" src="images/angellist.png"/></a>
         </li>
       </ul>
+    </section>
+    <section class="square-shape">
+      <div class="grow-shape">
+      </div>
     </section>
     <section id="portfolio" class="works">
       <div class="grid-1">
@@ -158,9 +162,10 @@
         </div>
       </div>
       <div class="grid-1b">
+        <!-- Card One -->
         <div class="rows">
             <div class="photo1">
-                <img class="work1b-img" alt="work 1" width="" height="" src="images/job3b.png">
+                <img class="work1b-img grow" alt="work 1" width="" height="" src="images/job3b.png">
             </div>
             <div class="work1b">
                 <h2 class="work-text1b poppins">Tonic</h2>
@@ -182,6 +187,7 @@
                 </nav>
             </div>
         </div>
+        <!-- Card Two -->
         <div class="rows">
             <div class="work1b">
                 <h2 class="work-text1b poppins">Multi-Post Stories</h2>
@@ -204,12 +210,13 @@
                 </nav>
             </div>
             <div class="photo2">
-                <img class="work1b-img" alt="work 2" width="" height="" src="images/job4b.png">
+                <img class="work1b-img grow" alt="work 2" width="" height="" src="images/job4b.png">
             </div>
         </div>
+        <!-- Card Three -->
         <div class="rows">
             <div class="photo1">
-                <img class="work1b-img" alt="work 3" width="" height="" src="images/job1b.png">
+                <img class="work1b-img grow" alt="work 3" width="" height="" src="images/job1b.png">
             </div>
             <div class="work1b">
                 <h2 class="work-text1b poppins">Facebook 360</h2>
@@ -232,6 +239,7 @@
                 </nav>
             </div>
         </div>
+        <!-- Card Four -->
         <div class="rows">
             <div class="work1b">
                 <h2 class="work-text1b poppins">Uber navigation</h2>
@@ -254,7 +262,7 @@
                 </nav>
             </div>
             <div class="photo2">
-                <img class="work1b-img" alt="work 4" width="" height="" src="images/job2b.png">
+                <img class="work1b-img grow" alt="work 4" width="" height="" src="images/job2b.png">
             </div>
         </div>
       </div>
