Add new classes to the inde.html file for transform effect styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="toolbar">
       <div class="container-2">
         <div class="logo">
-          <a href="#home"><p class="logo-txt poppins">My Logo</p></a>
+          <a href="#home"><p class="logo-txt poppins rotate">My Logo</p></a>
         </div>
         <nav class="menu">
           <img
@@ -108,7 +108,7 @@
         <!-- First card -->
         <div class="work1">
           <img
-            class="work1-img"
+            class="work1-img grow"
             alt="work 1"
             width="590px"
             height="440px"
@@ -154,7 +154,7 @@
         <!-- Second card -->
         <div class="work1">
           <img
-            class="work1-img"
+            class="work1-img grow"
             alt="work 2"
             width="590px"
             height="440px"
@@ -200,7 +200,7 @@
         <!-- Third card -->
         <div class="work1">
           <img
-            class="work1-img"
+            class="work1-img grow"
             alt="work 3"
             width="590px"
             height="440px"
@@ -246,7 +246,7 @@
         <!-- Fourth card -->
         <div class="work1">
           <img
-            class="work1-img"
+            class="work1-img grow"
             alt="work 4"
             width="590px"
             height="440px"
